--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only server.ts",
+    "dev": "tsx watch server.ts",
     "build": "tsc"
   },
   "dependencies": {
@@ -23,6 +23,7 @@
     "@types/express": "^5.0.6",
     "@types/node": "^25.3.0",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
