--- a/server/package.json
+++ b/server/package.json
@@ -13,15 +13,19 @@
     "build": "tsc"
   },
   "dependencies": {
+    "bullmq": "^5.70.0",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
-    "nodemon": "^3.1.14"
+    "ioredis": "^5.9.3",
+    "nodemon": "^3.1.14",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.3.0",
+    "@types/uuid": "^10.0.0",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
